Feature #1232 配置项管理,修正分页栏的位置

--- a/modules/com/app/views/com/config_items/index.html.erb
+++ b/modules/com/app/views/com/config_items/index.html.erb
@@ -1,10 +1,4 @@
 <%= page_title %>
-<style type="text/css">
-#config_itemsPaginatorBox{
-    border-top: 1px solid #EAEAEA;
-}
-
-</style>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
@@ -34,25 +28,34 @@
                                                                            :url_param_value => 'id',
                                                                            :url_param_name => 'config_class_id'} %>
             </td>
-            <td>     <table width="100%"> <tr style="height: 269px;background-color: #FFFFFF;"><td>
+            <td>
+              <table id="config_items_table" >
+                <tbody>
+                <tr id="config_items_table_tr">
+                  <td>
                     <div id="config_items" class="datatable" style="width:100%">
                       <div id="id" style="display:none">
-                        <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+                        <%= link_to(t(:edit), {:action => "edit", :id => "{id}"}) %>
+                        |<%= link_to(t(:show), {:action => "show", :id => "{id}"}) %>
                       </div>
                     </div>
-                    <%= datatable("config_items",{:action=>"get_data",:format=>"json"},
-                                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                                   {:key=>"item_number",:label=>t(:label_com_config_item_number),:width=>"140px",:searchable=>true},
-                                   {:key=>"config_class_name",:label=>t(:label_com_config_item_config_class),:width=>"140px",:searchable=>true},
-                                   {:key=>"managed_group_name",:label=>t(:label_com_config_item_managed_group),:width=>"140px",:searchable=>true},
-                                   {:key=>"managed_person_name",:label=>t(:label_com_config_item_managed_person),:searchable=>true},
-                                   {:key=>"last_checked_at",:label=>t(:label_com_config_item_last_checked_at)},
-                                                          ],{:force_html=>true,:paginator_box=>"config_itemsPaginatorBox",:search_box=>"config_itemsSearchBox"})%>
-            </td>
-            </tr>
-              <tr><td><div id="config_itemsPaginatorBox" ></div></td></tr>
-
-            </table>
+                    <%= datatable("config_items", {:action => "get_data", :format => "json"},
+                                  [{:key => "id", :label => t(:operation), :formatter => "Y.irm.template", :width => "70px"},
+                                   {:key => "item_number", :label => t(:label_com_config_item_number), :width => "140px", :searchable => true},
+                                   {:key => "config_class_name", :label => t(:label_com_config_item_config_class), :width => "140px", :searchable => true},
+                                   {:key => "managed_group_name", :label => t(:label_com_config_item_managed_group), :width => "140px", :searchable => true},
+                                   {:key => "managed_person_name", :label => t(:label_com_config_item_managed_person), :searchable => true},
+                                   {:key => "last_checked_at", :label => t(:label_com_config_item_last_checked_at)},
+                                  ], {:force_html => true, :paginator_box => "config_itemsPaginatorBox", :search_box => "config_itemsSearchBox"}) %>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <div id="config_itemsPaginatorBox"></div>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
 
             </td>
           </tr>
