--- a/app/views/irm/reports/_show_matrix.html.erb
+++ b/app/views/irm/reports/_show_matrix.html.erb
@@ -1,3 +1,4 @@
+<% if auto_run?(@report) %>
 <table id="reportData" width="100%">
   <thead>
     <tr>
@@ -16,3 +17,4 @@
     <% end %>
   </tbody>
 </table>
+<% end %>
