--- a/app/views/irm/reports/_show_program.html.erb
+++ b/app/views/irm/reports/_show_program.html.erb
@@ -54,8 +54,10 @@
   </div>
   <% end %>
   <div class="listRelatedObject setupBlock">
+    <% if auto_run?(@report) %>
     <div class="page-block">
       <%= show_program_report_data(@report) %>
     </div>
+    <% end %>
   </div>
 </div>
