--- a/app/views/irm/reports/_edit_step_2.html.erb
+++ b/app/views/irm/reports/_edit_step_2.html.erb
@@ -3,7 +3,7 @@
       float:left;
   }
 </style>
-<%= form_for(@report,:url=>{:action=>"edit"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@report,:url=>{:action=>"edit"},:html =>{:id => "editReportForm"},:builder => LabellingFormBuilder) do |f| %>
 <%= f.hidden_field(:step) %>
 <div  class="wizard-block">
   <%= render :partial => "step_header",:locals => {:step=>@report.step} %>
@@ -55,7 +55,6 @@
                       <td class="labelCol"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
                       <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
                     </tr>
-
                   </tbody>
                 </table>
             </div>
@@ -70,6 +69,7 @@
                   <td class="pbTitle"></td>
                   <td id="bottomButtonRow" class="pbButtonb">
                     <div class="button"><%= f.submit t :next%></div>
+                    <div class="button"><%= link_to t(:save), {:action => "update",:id=>@report.id},{:class=>"submit"} %></div>
                     <div class="button"><%= link_to t(:cancel), {:action => "show",:id=>@report.id} %></div>
                   </td>
                 </tr>
