--- a/app/views/irm/reports/_custom_report_params.html.erb
+++ b/app/views/irm/reports/_custom_report_params.html.erb
@@ -29,11 +29,11 @@
             <tr>
               <td>
                 <label for="filterDateFrom"><%= t(:label_irm_report_filter_date_from) %></label>
-                <%= f.text_field(:filter_date_from,:value=>@filter_date_from,:id=>"filterDateFrom",:size=>12,:class=>"date",:nobutton=>true)%>
+                <%= f.text_field(:filter_date_from,:value=>calendar_date(@filter_date_from),:id=>"filterDateFrom",:size=>12,:class=>"date",:nobutton=>true)%>
               </td>
               <td>
                 <label for="filterDateTo"><%= t(:label_irm_report_filter_date_to) %></label>
-                <%= f.text_field(:filter_date_to,:value=>@filter_date_to,:id=>"filterDateTo",:size=>12,:class=>"date",:nobutton=>true)%>
+                <%= f.text_field(:filter_date_to,:value=>calendar_date(@filter_date_to),:id=>"filterDateTo",:size=>12,:class=>"date",:nobutton=>true)%>
               </td>
             </tr>
           </table>
