feature 按照黄耿项目要求，在事故单增加estimated_date，计划完成日期属性

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -224,9 +224,9 @@
       <td class="data3Col">
         <div><%= @incident_request[:incident_status_name] %></div>
       </td>
-      <td class="label3Col"><label><%= t(:label_icm_incident_request_incident_phase_code) %></label></td>
+      <td class="label3Col"><label><%= t(:label_icm_incident_request_estimated_date) %></label></td>
       <td class="data3Col">
-        <div><%= @incident_request[:incident_phase_name] %></div>
+        <div><%= calendar_date(@incident_request[:estimated_date]) %></div>
       </td>
     </tr>
     <tr>
