--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -1,3 +1,5 @@
+<% require_javascript(:datepicker) %>
+<% require_css(:datepicker) %>
 <%= form_for(@incident_request,:url=>{:action=>"create"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
 <%= hidden_field_tag :return_url,@return_url %>
 <div id="ep" class="edit-block page-block">
@@ -162,7 +164,15 @@
 
             </tr>
           <%end%>
-          <% if allow_to_function?(:create_icdt_rqst_for_other) %>
+          <tr>
+            <td class="labelCol"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
+            <td class="dataCol">
+              <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
+            </td>
+            <td class="labelCol empty">&nbsp;</td>
+            <td class="dataCol empty">&nbsp;</td>
+          </tr>
+          <% if false && allow_to_function?(:create_icdt_rqst_for_other) %>
             <tr>
               <td class="labelCol"><label for="incident_request_report_source_code"><%=t(:label_icm_incident_request_report_source_code)%></label></td>
               <td class="dataCol">
@@ -177,6 +187,7 @@
               </td>
             </tr>
          <%end%>
+         <% if false %>
             <tr>
               <td class="labelCol"><label for="incident_request_request_type_code"><%=t(:label_icm_incident_request_request_type_code)%></label></td>
               <td class="dataCol">
@@ -186,6 +197,7 @@
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
+         <% end %>
         </tbody>
       </table>
     </div>
