--- a/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -29,7 +29,8 @@
                                { :key => "kb_flag", :hidden =>true },
                                { :key => "requested_by_label", :label => t(:label_icm_incident_request_requested_by),:width=>"100px" },
                                { :key => "last_request_date", :label => t(:label_icm_incident_request_last_date),:width=>"140px" },
-                               { :key => "external_system_id_label", :label => t(:label_irm_external_system),:width=>"140px" }
+                               { :key => "external_system_id_label", :label => t(:label_irm_external_system),:width=>"140px" },
+                               { :key => "estimated_date", :label => t(:label_icm_incident_request_estimated_date),:width=>"120px" }
                                ],{:export_data=>"#incidentRequestExport",:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox',:view_filter=>true,:html=>true})%>
         <div id="incidentRequestsPaginatorBox" class="irm-paginator-box"></div>
 </div>
