fixed: 日历控件如果在页面底下,那个选择日期的小窗口出来之后屏幕会显示不全，这个时候要去点浏览器的滚动条，但是一点滚动条，日期小窗口就会因为鼠标焦点转移了而自动关闭

--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -112,6 +112,12 @@
                 <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_incident_request_file"} %>
               </td>
             </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
+              <td class="data2Col">
+                <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
+              </td>
+            </tr>
         </tbody>
       </table>
     </div>
@@ -121,14 +127,6 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-        <tr>
-          <td class="labelCol"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
-          <td class="dataCol">
-            <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
-          </td>
-          <td class="labelCol empty">&nbsp;</td>
-          <td class="dataCol empty">&nbsp;</td>
-        </tr>
             <tr>
                 <td class="labelCol"><label for="incident_request_contact_id"><%=t(:label_icm_incident_request_contact)%></label></td>
                 <td class="dataCol">
