--- a/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/app/views/icm/incident_requests/_edit_form.html.erb
@@ -120,6 +120,13 @@
                 <%= rich_text_area("incident_request_summary") %>
               </td>
             </tr>
+
+            <tr>
+              <td class="labelCol"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
+              <td class="data2Col">
+                <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
+              </td>
+            </tr>
             <tr>
               <td class="labelCol"></td>
               <td class="dataCol" colspan="3" style="width:82%">
@@ -138,15 +145,6 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-
-        <tr>
-          <td class="labelCol"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
-          <td class="dataCol">
-            <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
-          </td>
-          <td class="labelCol empty">&nbsp;</td>
-          <td class="dataCol empty">&nbsp;</td>
-        </tr>
             <tr>
                 <td class="labelCol"><label for="incident_request_contact_id"><%=t(:label_icm_incident_request_contact)%></label></td>
                 <td class="dataCol">
