fixed: 日历控件如果在页面底下,那个选择日期的小窗口出来之后屏幕会显示不全，这个时候要去点浏览器的滚动条，但是一点滚动条，日期小窗口就会因为鼠标焦点转移了而自动关闭

--- a/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/app/views/icm/incident_requests/_edit_form.html.erb
@@ -110,7 +110,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
-              <td class="data2Col">
+              <td class="dataCol">
                 <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
               </td>
             </tr>
