--- a/app/views/irm/common/create_upload_file.json.erb
+++ b/app/views/irm/common/create_upload_file.json.erb
@@ -1,8 +1,6 @@
 {
     "err":"",
     "msg":{
-        "url":"<%= @url %>",
-        "localfile":"",
-        "id":"1"
+        "url":"<%= @url %>"
     }
 }
