--- a/modules/com/app/views/com/config_attributes/get_data.html.erb
+++ b/modules/com/app/views/com/config_attributes/get_data.html.erb
@@ -1,28 +1,28 @@
 <!--  irm datatable      -->
  <div class="irm-datatable">
    <div>
-       <table count="<%=@count%>">
+       <table count="<%=@count%>" id="config_attributes_table">
          <thead>
            <tr>
              <th style="width:80px">
                <div><%= t(:operation) %></div>
              </th>
-             <th>
+             <th key="code">
                <div><%= t(:label_com_config_attribute_code) %></div>
              </th>
-             <th>
+             <th key="name">
                 <div><%= t(:label_com_config_attribute_name) %></div>
              </th>
-             <th>
+             <th key="input_type">
                <div><%= t(:label_com_config_attribute_input_type) %></div>
              </th>
-             <th>
+             <th key="input_value">
                <div><%= t(:label_com_config_attribute_input_value) %></div>
              </th>
-             <th>
+             <th key="description">
                <div><%= t(:label_com_config_attribute_description) %></div>
              </th>
-             <th>
+             <th key="extend">
                <div><%= t(:label_config_class_attribute_extend) %></div>
              </th>
            </tr>
