--- a/modules/com/app/views/com/config_classes/show.html.erb
+++ b/modules/com/app/views/com/config_classes/show.html.erb
@@ -64,11 +64,11 @@
         <div id="config_attributes" class="datatable" style="width:100%"></div>
         <%= datatable("config_attributes",{:controller=>"com/config_attributes",:action=>"get_data",:format=>"json",:class_id=>@config_class.id},
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       { :key => "code", :label => t(:label_com_config_attribute_code),:searchable=>true },
+                       { :key => "code", :label => t(:label_com_config_attribute_code),:searchable=>true,:orderable=> true },
                        { :key => "input_type", :label => t(:label_com_config_attribute_input_type),:searchable=>true },
-                       { :key => "input_value", :label => t(:label_com_config_attribute_input_value) },
-                       { :key => "name", :label => t(:label_com_config_attribute_name),:searchable=>true },
-                       { :key => "description", :label => t(:label_com_config_attribute_description),:width=>"250px" }
+                       { :key => "input_value", :label => t(:label_com_config_attribute_input_value),:orderable=> true },
+                       { :key => "name", :label => t(:label_com_config_attribute_name),:searchable=>true,:orderable=> true},
+                       { :key => "description", :label => t(:label_com_config_attribute_description),:orderable=> true,:width=>"250px" }
                       ],{:paginator_box=>"config_attributesPaginatorBox",:search_box=>"config_attributesSearchBox",:force_html=>true})%>
         <div id="config_attributesPaginatorBox"></div>
       </div>
