--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -191,7 +191,7 @@
       function setLayoutPreview(current_layout, container) {
           container.html("");
           $.each(current_layout.split(','),function(index,value) {
-              //生成多应的html标签
+              //生成对应的html标签
               for(i=1; i<=parseInt(value); i++) {
                   if(i == parseInt(value)) {
                      container.append('<div id='+index+' class="dragging cc span-'+(24/parseInt(value))+' last"></div>');
