封装系统中附件上传，便于统一维护

--- a/app/views/helper/_upload_file.html.erb
+++ b/app/views/helper/_upload_file.html.erb
@@ -7,9 +7,7 @@
         <td><div><a class="delete-file" delete_ref="${sequence}" href="javascript:void(0)"><%= t(:delete) %></a></div></td>
     </tr>
   </tbody>
-  <tbody class="file-contents" id="file-contents">
-
-  </tbody>
+  <tbody class="file-contents" id="file-contents"></tbody>
   <tbody class="file-buttons">
     <tr>
       <td colspan="4"><a class="add-file" href="javascript:void(0)"><%= t(:label_icm_incident_journal_add_attachment) %></a></td>
