--- a/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/app/views/icm/incident_requests/_edit_form.html.erb
@@ -126,18 +126,12 @@
                 <%= rich_text_area("incident_request_summary") %>
               </td>
             </tr>
-            <tr>
-              <td class="labelCol"></td>
-              <td class="dataCol" colspan="3" style="width:82%">
-                  <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"edit_incident_request_file"} %>
-              </td>
-            </tr>
+
         </tbody>
       </table>
     </div>
-
-
-
+    <!-- 加载上传附件模板 -->
+    <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => false, :exist_attachments => list_ir_existed_attachments(@incident_request) } %>
     <div id="head_3_ep" class="pbSubheader tertiaryPalette">
       <h3><%= t(:label_icm_incident_requset_addition_info) %></h3>
     </div>
