--- a/app/views/irm/bulletins/_edit_form.html.erb
+++ b/app/views/irm/bulletins/_edit_form.html.erb
@@ -102,47 +102,8 @@
       </table>
     </div>
   </div>
-
-  <div class="pbBody">
-    <div class="pbSubheader first tertiaryPalette">
-      <h3><%= t(:label_irm_bulletin_attachment) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table cellpadding="0" cellspacing="0" border="0">
-        <thead>
-          <tr>
-            <th width="5%"></th>
-            <th width="40px"></th>
-            <th class="dataCol"><%= t :label_skm_file_name %></th>
-            <th class="dataCol"><%= t :label_skm_file_category %></th>
-            <th class="dataCol"><%= t :description%></th>
-          </tr>
-        </thead>
-        <tbody id="file_body">
-            <tr id="file_0">
-              <td class="dataCol"></td>
-              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
-              <td class="dataCol"><%=file_field_tag "file[0][file]"%></td>
-              <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-            </tr>
-
-            <tbody id="exist_attachments_list">
-                <%= list_bulletin_existed_attachments(@bulletin)%>
-            </tbody>
-        <tbody>
-            <tr>
-              <td class="dataCol"></td>
-              <td class="dataCol"></td>
-              <td class="dataCol"><%= link_to t(:label_skm_file_add_line), {}, {:href => "javascript:void(0);", :onclick => "generate_line();"} %></td>
-              <td class="dataCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
+  <!-- 加载上传附件模板 -->
+  <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => true, :exist_attachments => list_bulletin_existed_attachments(@bulletin) } %>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
@@ -204,26 +165,4 @@ Ext.onReady(function() {
     });
 
 });
-</script>
-
-<script>
-  var line_count = 1;
-
- function delete_line(l)
- {
-     $("#file_" + l).remove();
- }
-
-  function generate_line()
-  {
-      var node = '<tr id="file_' + line_count + '">'
-                  + '<td class="dataCol"></td>'
-                  + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
-                  + '<td class="dataCol"><input type="file" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
-                  + '<td class="dataCol"><select name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= raw(options_for_select(available_file_categories).gsub!(/\n+/, ""))%>' + '</select></td>'
-                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
-                  + '</tr>';
-      $("#file_body").append(node);
-      line_count ++;
-  }
 </script>
