--- a/app/views/skm/entry_headers/_edit_form.html.erb
+++ b/app/views/skm/entry_headers/_edit_form.html.erb
@@ -72,43 +72,9 @@
       </table>
     </div>
     <% end %>
+    <!-- 加载上传附件模板 -->
+    <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => true, :exist_attachments => list_exist_skm_entry_attachments(@entry_header.attachments, @entry_header.id), :attachments => @entry_header.attachments,:delete_url => {:controller => "skm/entry_headers", :action => "remove_exits_attachment"} } %>
 
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_skm_entry_header_attachments) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table cellpadding="0" cellspacing="0" border="0">
-        <thead>
-          <tr>
-            <th width="5%"></th>
-            <th width="40px"></th>
-            <th class="dataCol"><%= t :label_skm_file_name %></th>
-            <th class="dataCol"><%= t :label_skm_file_category %></th>
-            <th class="dataCol"><%= t :description%></th>
-          </tr>
-        </thead>
-        <tbody id="file_body">
-            <tr id="file_0">
-              <td class="dataCol"></td>
-              <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
-              <td class="dataCol"><%=file_field_tag "file[0][file]"%></td>
-              <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-            </tr>
-            <tbody id="exist_attachments_list">
-                <%= list_exist_skm_entry_attachments(@entry_header.attachments, @entry_header.id) %>
-            </tbody>
-        <tbody>
-            <tr>
-              <td class="dataCol"></td>
-              <td class="dataCol"></td>
-              <td class="dataCol"><%= link_to t(:label_skm_file_add_line), {}, {:href => "javascript:void(0);", :onclick => "generate_line();"} %></td>
-              <td class="dataCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -160,23 +126,4 @@
         $("#tr_");
   }
 
-
-  var line_count = 1;
-
- function delete_line(l)
- {
-     $("#file_" + l).remove();
-  }
-  function generate_line()
-  {
-       var node = $('<tr id="file_' + line_count + '">'
-               + '<td class="dataCol"></td>'
-               + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
-               + '<td class="dataCol"><input type="file" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
-               + '<td class="dataCol"><select name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= raw(options_for_select(available_file_categories).gsub!(/\n+/, ""))%>' + '</select></td>'
-               + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
-               + '</tr>');
-       $("#file_body").append(node);
-      line_count ++;
-  }
 </script>
