--- a/app/views/skm/entry_headers/new_step_3.html.erb
+++ b/app/views/skm/entry_headers/new_step_3.html.erb
@@ -20,69 +20,8 @@
     </div>
     <div class="pbWizardBody">
       <div class="secondary-palette">
-        <div class="pbBody">
-            <div class="pbSubsection">
-              <table cellpadding="0" cellspacing="0" border="0">
-                <thead>
-                  <tr>
-                    <th width="5%"></th>
-                    <th width="40px"></th>
-                    <th><%= t :label_skm_file_name %></th>
-                    <th><%= t :label_skm_file_category %></th>
-                    <th><%= t :description%></th>
-                  </tr>
-                </thead>
-                <tbody id="file_body">
-                    <tbody id="exist_attachments_list">
-                        <%= list_exist_attachments_during_create(@attachments)%>
-                    </tbody>
-                    <tr id="file_0">
-                      <td class="dataCol"></td>
-                      <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
-                      <td class="dataCol"><%=file_field_tag "file[0][file]", :required=>true%></td>
-                      <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-                    </tr>
-                    <tr id="file_1">
-                      <td class="dataCol"></td>
-                      <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(1);"} %></td>
-                      <td class="dataCol"><%=file_field_tag "file[1][file]", :required=>true%></td>
-                      <td class="dataCol"><%=select_tag "file[1][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-                    </tr>
-                    <tr id="file_2">
-                      <td class="dataCol"></td>
-                      <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(2);"} %></td>
-                      <td class="dataCol"><%=file_field_tag "file[2][file]", :required=>true%></td>
-                      <td class="dataCol"><%=select_tag "file[2][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-                    </tr>
-                    <tr id="file_3">
-                      <td class="dataCol"></td>
-                      <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(3);"} %></td>
-                      <td class="dataCol"><%=file_field_tag "file[3][file]", :required=>true%></td>
-                      <td class="dataCol"><%=select_tag "file[3][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-                    </tr>
-                    <tr id="file_4">
-                      <td class="dataCol"></td>
-                      <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(4);"} %></td>
-                      <td class="dataCol"><%=file_field_tag "file[4][file]", :required=>true%></td>
-                      <td class="dataCol"><%=select_tag "file[4][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
-                    </tr>
-                <tbody>
-                    <tr>
-                      <td class="dataCol"></td>
-                      <td class="dataCol"></td>
-                      <td class="dataCol"><%= link_to t(:label_skm_file_add_line), {}, {:href => "javascript:void(0);", :onclick => "generate_line();"} %></td>
-                      <td class="dataCol"></td>
-                      <td class="dataCol"></td>
-                    </tr>
-                </tbody>
-              </table>
-            </div>
-        </div>
+        <!-- 加载上传附件模板 -->
+        <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => true,:init_num => 5,:exist_attachments => list_exist_attachments_during_create(@attachments) } %>
       </div>
     </div>
     <div class="pbWizardFooter">
@@ -122,28 +61,9 @@
       $("#tr_");
   }
 
-
-  var line_count = 5;
-
   function save(){
       document.file_form.action = "batch_create";
       file_form.submit();
-  }
-  function delete_line(l)
-  {
-     $("#file_" + l).remove();
-  }
-  function generate_line()
-  {
-      var node = $('<tr id="file_' + line_count + '">'
-              + '<td class="dataCol"></td>'
-              + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
-              + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
-              + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= options_for_select(available_file_categories).gsub!(/\n+/, "")%>' + '</select></td>'
-              + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
-              + '</tr>');
-      $("#file_body").append(node);
-      line_count ++;
   }
 </script>
 <% end %>
