封装系统中附件上传，便于统一维护

--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -125,7 +125,7 @@
       </table>
     </div>
     <!-- 加载上传附件模板 -->
-    <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => false, :attachments => get_ir_existed_attachments(@incident_request) } %>
+    <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => false, :exists_attachments => list_ir_existed_attachments(@incident_request) } %>
     <div id="head_3_ep" class="pbSubheader tertiaryPalette">
       <h3><%= t(:label_icm_incident_requset_addition_info) %></h3>
     </div>
