为文件封装代码设置默认不显示文件类型列表

--- a/app/views/helper/_upload_file_template.html.erb
+++ b/app/views/helper/_upload_file_template.html.erb
@@ -1,3 +1,4 @@
+<% type_flag ||= false %>
 <div class="pbBody">
     <div class="pbSubheader first tertiaryPalette">
       <h3><%= t(:label_attachment_info) %></h3>
